--- a/templates/events.html
+++ b/templates/events.html
@@ -9,7 +9,7 @@
 				<table class="events-table" id="event-page-1">
 					<tr>
 						<td class="event-image">
-							<img src="{{ STATIC_URL }}images/events/career.jpg" >
+							<img src="{{ STATIC_URL }}images/events/freshman.jpg" >
 		    			</td>
 		    			<td class="event-desc">
 		    				<h2><strong>Freshman Welcome Party!</strong></h2>
@@ -24,13 +24,17 @@
 		    		<tr>
 		    			
 		    			<td class="event-image">
-							<img src="{{ STATIC_URL }}images/events/KoreaNightPoster.jpg" >
+							<img src="{{ STATIC_URL }}images/events/chocolate.jpg" >
 		    			</td>
 		    			<td class="event-desc">
-		    				<h2><strong>Korea Night 2015</strong></h2>
-		    				<h4>March 21, 2014, 7:00PM at Reynolds Theater</h4>
+		    				<h2><strong>KUSA White Day Chocolate Making</strong></h2>
+		    				<h4>March 15, 2016, 7:00PM at Sarratt 308</h4>
 		    				<p>
-		    					Duke KUSA proudly presents KOREA NIGHT! Join us for our annual cultural showcase featuring a night filled with various student performing groups demonstrating Korean culture. From drums to dance to many vocal musical acts, there's sure to be many amazing performances for everyone! There will also be a free dinner beforehand, consisting of bulgogi, stir-fried noodles, and Korean pancakes. Visit our <a href="https://www.facebook.com/events/803751349696899">Facebook event page</a> for more details and information!
+		    					Come celebrate White Day 2016 with KUSA by making your own chocolates!
+								The tradition:
+								In Korea, White Day is considered to be the counterpart of Valentine's Day. On Valentine's Day, women typically gift homemade chocolates to men as a sign of love or friendship. One month later on March 14th, the reverse happens - men present gifts to the women in their lives. 
+
+								KUSA will be providing various fruits, chocolates and toppings for you to make some treats for yourself, friends and loved ones. Stop by for a sweet treat as we all get back into school-mode!Visit our <a href="https://www.facebook.com/events/1075872145768031/">Facebook event page</a> for more details and information!
 		    				</p>
 		    			</td>
 		    		</tr>
