--- a/templates/english.html
+++ b/templates/english.html
@@ -13,7 +13,7 @@
 		    <div class="jcarousel">
 		    	<ul>
 			        <li>
-			        	<img src="{{ STATIC_URL }}images/photo1_new.jpg">
+			        	<img src="{{ STATIC_URL }}images/main1_new.jpg">
 			        	<h1 class="carousel-title" id="explore-title">Explore</h1>
 			        	<div class="carousel-desc" id="explore-desc">
 			        		<p>performances</p><br>
@@ -22,7 +22,7 @@
 			        	</div>
 			        </li>
 			        <li>
-			        	<img src="{{ STATIC_URL }}images/photo2_new.jpg">
+			        	<img src="{{ STATIC_URL }}images/main2_new.jpg">
 			        	<h1 class="carousel-title" id="learn-title">Learn</h1>
 			        	<div class="carousel-desc" id="learn-desc">
 			        		<p>guidance</p><br>
@@ -31,7 +31,7 @@
 			        	</div>
 			        </li>
 			        <li>
-			        	<img src="{{ STATIC_URL }}images/photo3_new.jpg">
+			        	<img src="{{ STATIC_URL }}images/main3_new.jpg">
 			        	<h1 class="carousel-title" id="connect-title">Connect</h1>
 			        	<div class="carousel-desc" id="connect-desc">
 			        		<p>bond</p><br>
