--- a/templates/english.html
+++ b/templates/english.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!--{% extends "base.html" %}-->
 
 {% block carousel %}
 <div id="carousel">
@@ -14,32 +14,33 @@
 		    	<ul>
 			        <li>
 			        	<img src="{{ STATIC_URL }}images/main2_new.jpg">
-			        	<!--
-		        		<h1 class="carousel-title" id="learn-title">Learn</h1>
-			        	<div class="carousel-desc" id="learn-desc">
-			        		<p>guidance</p><br>
-			        		<p>information</p><br>
-			        		<p>mentorship</p>
-			        	-->
-			        </li>
-			        <li>
-			        	<img src="{{ STATIC_URL }}images/main1_new.jpg">
-			        	<h1 class="carousel-title" id="explore-title">Explore</h1>
-			        	<div class="carousel-desc" id="explore-desc">
-			        		<p>performances</p><br>
-			        		<p>events</p><br>
-			        		<p>opportunities</p>
-			        	</div>
-			        </li>
-			        <li>
-
-			        	<img src="{{ STATIC_URL }}images/main3_new.jpg">
-			        	<h1 class="carousel-title" id="connect-title">Connect</h1>
+						<h1 class="carousel-title" id="connect-title">Connect</h1>
 			        	<div class="carousel-desc" id="connect-desc">
 			        		<p>bond</p><br>
 			        		<p>network</p><br>
 			        		<p>socialize</p>
 			        	</div>
+			        </li>
+			        <li>
+			        	<img src="{{ STATIC_URL }}images/main1_new.jpg">
+		        		<h1 class="carousel-title" id="learn-title">Learn</h1>
+			        	<div class="carousel-desc" id="learn-desc">
+			        		<p>guidance</p><br>
+			        		<p>information</p><br>
+			        		<p>mentorship</p>
+			        	</div>
+					</li>
+			        <li>
+			        	<img src="{{ STATIC_URL }}images/main3_new.jpg">
+			        	<!--<h1 class="carousel-title" id="explore-title">Explore</h1>-->
+			        	<!--
+			        	<div class="carousel-title" id="explore-title">
+			        		<h1>WELCOME TO VANDERBILT</h1><br>
+			        		<h1>KOREAN UNDERGRADUATE</h1><br>
+			        		<h1>STUDENT ASSOCIATION</h1>
+			        	</div>
+			        -->
+
 			        </li>
 		        </ul>
 		    </div>
@@ -52,6 +53,7 @@
 	    </div> -->
 		</div>
 </div>
+<!--
 {% endblock %}
 
 {% block about %}
@@ -82,7 +84,8 @@
 			</div>
 		</div>
 	</div>
-</div> -->
+</div> 
+
 {% endblock %}
 
 {% block contact %}
@@ -119,5 +122,18 @@
 		</div>
 	</div>
 </div>
+
+	<div id="footer">
+				<div class="narrower-container">
+					<div id="footer-desc">
+						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. All Rights Reserved. <br><br>
+						<!-- <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. 
+					</div>
+					<div id="toTop">
+						<a href="#"><strong>top</strong>^</a>
+					</div>
+				</div>
+			</div>
+			-->
 {% endblock %}
 
