--- a/KUSAapp/static/css/style.css
+++ b/KUSAapp/static/css/style.css
@@ -6,15 +6,48 @@
 body {
 	margin: 0;
 	font-family: 'Lato', sans-serif;
+	background: black;
 }
+
+
+
 
 /* Text formatting */
 h1 {
-	font-family: 'Oswald', sans-serif;
-	padding-bottom:2px;
-	font-size:50px;
+	font-family: "Franklin Gothic Medium", sans-serif;
+	font-size:40px;
+	color: white;
+
 	display:inline-block;
 }
+h5 {
+	font-family: "Franklin Gothic Medium", sans-serif;
+	font-size:30px;
+	color: white;
+	font-weight: bolder;
+
+	display:inline-block;
+}
+h2 {
+	font-family: 'Oswald', sans-serif;
+	color: white;
+
+	font-size:40px;
+	display:inline-block;
+
+
+}
+b {
+ display: inline-block;
+  padding: 10px 15px;
+  font-size: 17px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+}
+
 h4 {
 	font-size:15px;
 }
@@ -58,14 +91,203 @@ p {
 	padding-top:20px;	
 	clear:both;
 }
-
-
-/* Header */
-#header {
-	height:300px;
-	/*background-image:url("../images/halftone.png");*/
+.button {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 17px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #D4AF37;
+  border: none;
+  border-radius: 15px;
 }
 
+.button:hover {background-color: #CC9933}
+
+.navbar-brand {
+	height: 76px;
+	position: relative;
+	line-height: 60px;
+	padding: 7px 15px;
+	display: inline-block;
+}
+.navbar-brand > img {
+	max-height: 100%;
+}
+
+/* Header */
+
+
+input[type="submit"]
+{
+    background: transparent;
+    border: none;
+}
+
+
+header {
+   position: relative;
+   height: 1000px;
+   min-height: 500px;
+   width: 100%;
+   background: #161415 url(../images/grey_wall_wash_2.jpg) no-repeat top center;
+   background-size: cover !important;
+	-webkit-background-size: cover !important;
+   text-align: center;
+   overflow: hidden;
+}
+/* vertically center banner section */
+header:before {
+   content: '';
+   display: inline-block;
+   vertical-align: middle;
+   height: 100%;
+}
+header .banner {
+   display: inline-block;
+   vertical-align: middle;
+   margin: 0 auto;
+   width: 85%;
+   padding-bottom: 10px;
+   text-align: center;
+}
+
+header .banner-text { width: 100%; }
+header .banner-text h1 {
+   font: 53px/1.1em 'Franklin Gothic Medium', sans-serif;
+   color: #fff;
+   letter-spacing: 3px;
+   margin: 0 auto 5px auto;
+   text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+}
+header .banner-text h3 {
+   font: 18px/1.9em 'librebaskerville-regular', serif;
+   color: #A8A8A8;
+   margin: 0 auto;
+   width: 70%;
+   text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+}
+header .banner-text h3 span,
+header .banner-text h3 a {
+   color: #fff;
+}
+header .banner-text hr {
+   width: 60%;
+   margin: 18px auto 24px auto;
+   border-color: #2F2D2E;
+   border-color: rgba(150, 150, 150, .1);
+}
+
+/* header social links */
+header .social {
+   margin: 24px 0;
+   padding: 0;
+   padding: 0;
+   font-size: 30px;
+   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+}
+header .social li {
+   display: inline-block;
+   margin: 0 15px;
+   padding: 0;
+}
+header .social li a { color: #fff; }
+header .social li a:hover { color: #11ABB0; }
+
+/* scrolldown link */
+header .scrolldown a {
+   position: absolute;
+   bottom: 30px;
+   left: 50%;
+   margin-left: -29px;
+   color: #fff;
+   display: block;
+   height: 42px;
+   width: 42px;
+   font-size: 42px;
+   line-height: 42px;
+   color: #fff;
+   border-radius: 100%;
+
+   -webkit-transition: all .3s ease-in-out;
+   -moz-transition: all .3s ease-in-out;
+   -o-transition: all .3s ease-in-out;
+   transition: all .3s ease-in-out;
+}
+
+/* primary navigation
+--------------------------------------------------------------------- */
+#nav-wrap ul, #nav-wrap li, #nav-wrap a {
+	 margin: 0;
+	 padding: 0;
+	 border: none;
+	 outline: none;
+}
+
+/* nav-wrap */
+#nav-wrap {
+   font: 12px 'opensans-bold', sans-serif;
+   width: 100%;
+   text-transform: uppercase;
+   letter-spacing: 2.5px;
+   margin: 0 auto;
+   z-index: 100;
+   position: fixed;
+   left: 0;
+   top: 0;
+}
+.opaque { background-color: #333; }
+
+/* hide toggle button */
+#nav-wrap > a.mobile-btn { display: none; }
+
+ul#nav {
+   min-height: 48px;
+   width: auto;
+
+   /* center align the menu */
+   text-align: center;
+}
+ul#nav li {
+   position: relative;
+   list-style: none;
+   height: 48px;
+   display: inline-block;
+}
+
+/* Links */
+ul#nav li a {
+
+/* 8px padding top + 8px padding bottom + 32px line-height = 48px */
+
+   display: inline-block;
+   padding: 8px 13px;
+   line-height: 32px;
+	text-decoration: none;
+   text-align: left;
+   color: #fff;
+
+	-webkit-transition: color .2s ease-in-out;
+	-moz-transition: color .2s ease-in-out;
+	-o-transition: color .2s ease-in-out;
+	-ms-transition: color .2s ease-in-out;
+	transition: color .2s ease-in-out;
+}
+
+ul#nav li a:active { background-color: transparent !important; }
+ul#nav li.current a { color: #F06000; }
+
+
+
+
+#header_base {
+	height:80px;
+	/*background-image:url("../images/halftone.png");*/
+}
+/*
 #topbar {
 	height:			  40px;	
 	background-image: url("../images/grey_wash_wall.png");
@@ -75,6 +297,7 @@ p {
 	font-size: 18px;
 	color: #B7B7B7;
 }
+*/
 #desc {
 	float: left;
 }
@@ -93,6 +316,74 @@ p {
 	display: block;
 	margin:  0 auto;
 }
+
+
+
+/* nav-wrap */
+.nav-wrap ul, .nav-wrap li, /nav-wrap a {
+	 margin: 0;
+	 padding: 0;
+	 border: none;
+	 outline: none;
+}
+.nav-wrap {
+   font: 12px 'opensans-bold', sans-serif;
+   width: 100%;
+   text-transform: uppercase;
+   letter-spacing: 2.5px;
+   margin-top: 12px;
+   z-index: 100;
+   position: fixed;
+   left: 0;
+   top: 0;
+}
+.opaque { background-color: #333; }
+
+
+.nav ul {
+   min-height: 48px;
+   width: auto;
+
+   /* center align the menu */
+   text-align: center;
+}
+.nav li {
+   position: relative;
+   list-style: none;
+   height: 48px;
+   display: inline-block;
+}
+
+/* Links */
+.nav a {
+
+/* 8px padding top + 8px padding bottom + 32px line-height = 48px */
+
+   display: inline-block;
+   padding: 8px 13px;
+   line-height: 32px;
+	text-decoration: none;
+   text-align: left;
+   color: #fff;
+
+}
+
+ul#nav li a:active { background-color: transparent !important; }
+ul#nav li.current a { color: #F06000; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #navbar {
 	height:		      50px;
 	width:			  100%;
@@ -260,12 +551,20 @@ p {
 
 
 #about {
-	background-image: url("../images/grey_wash_wall.png");
-	height: 		  490px;
+	background-image: url("../images/grey_wall_wash_2.jpg") ;
+	width: 100%;
+
+   background-size: cover !important;
+	height: 		  550px;
+	   overflow: hidden;
+
 	/*	*/
 }
 #about h1 {
 	border-bottom: 3px solid #B4B4B4;
+}
+#about h2{
+	
 }
 #about p {
 	text-align: left;
@@ -511,7 +810,7 @@ p {
 /* Breadcrumb Navigation */
 
 /********************* * FORMS * *********************/
-
+	
 /* Any form formatting that varies from the common formatting, if there are multiple differently formatted forms, then use sub-headings */
 
 /********************* * TABLES * *********************/
