--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,9 @@
+
 <html>
 	<head>
 		<title>Vanderbilt KUSA: Vanderbilt University Korean Undergraduate Student Association</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />                
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style1.css" />                
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.fancybox.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}galleria/themes/classic/galleria.classic.css">
         <link href="http://fonts.googleapis.com/css?family=Lato:300|Oswald" rel="stylesheet" type="text/css" /> 
@@ -33,37 +34,122 @@
 	</head>
 
 	<body>
-		<div id="container">
-			<!-- top bar/logo/nav -->
-			<div id="header">
-				<!--top bar with description and email-->
-				<div id="topbar">
-					<div class="narrower-container">
-						<div id="desc"><p>Vanderbilt Korean Undergraduate Student Organization</p></div>
-						<div id="email"><p>kusa.vandy@gmail.com</p></div>
+		
+		<header id="home">
+				<nav id="nav-wrap">
+					<ul id="nav" class="nav">
+			            <li><a href="/"> Home</a></li>
+			            <li class="current"><a href="../about/">About</a></li>
+				        <li><a href="../board/">Kusa board</a></li>
+			            <li><a href="#events">Events</a></li>
+			            <li><a href="photos/">Photos</a></li>
+			            <li><a href="#jobs">Jobs</a></li>
+			            <li><a href="#contact">Contact US</a></li>
+		         	</ul> <!-- end #nav -->
+		     	</nav>
+
+		</header>		
+
+
+		<div id="maininfo">
+			<div id="carousel">
+					<div id="carousel-and-nav">
+					    <div class="jcarousel">
+					    	<ul>
+
+						        <li>
+
+						        	<img src="{{ STATIC_URL }}images/main2_new.jpg">
+						        	<!--
+									<h1 class="carousel-title" id="connect-title">Connect</h1>
+						        	<div class="carousel-desc" id="connect-desc">
+						        		<p>bond</p><br>
+						        		<p>network</p><br>
+						        		<p>socialize</p>
+						        	</div>
+						        	-->
+						        </li>
+
+						        <li>
+						        	<img src="{{ STATIC_URL }}images/main1_new.jpg">
+						        	<!--
+					        		<h1 class="carousel-title" id="learn-title">Learn</h1>
+						        	<div class="carousel-desc" id="learn-desc">
+						        		<p>guidance</p><br>
+						        		<p>information</p><br>
+						        		<p>mentorship</p>
+						        	</div>
+						        -->
+								</li>
+						        <li>
+						        	<img src="{{ STATIC_URL }}images/main3_new.jpg">			  
+						        </li>
+					        </ul>
+					    </div>
 					</div>
-				</div>				
-				<!--space for kusa logo-->
-				<div id="logo">
-					<div class="narrower-container"> 
-						<img src="{{ STATIC_URL }}images/KUSA_logo.jpg" >
+			</div>
+		</div>
+
+		<div id="about">
+			<div class="section-container">
+				<div class="narrower-container">
+			    <div class="section-content">
+				    <div id="about-list">
+				    	<img class="prof-pic" src="{{STATIC_URL}}images/zzz.png" alt="" />
 					</div>
 				</div>
-				<!--nav bar for different pages-->
-				<div id="navbar"> 
+			</div>		
+			<div id="about">
+				<div class="section-container">
 					<div class="narrower-container">
-						<ul id="nav-list">
-							<li><a href="#about">KUSA</a></li>
-							<li><a href="#exec">KUSA Board</a></li>
-							<li><a href="#events">Events</a></li>
-							<li><a href="#photos">Photos</a></li>
-							<li><a href="#contact">Contact Us</a></li>
-						</ul>
+						<div class="section-title">		
+					    	<h1> About Us</br> </h1>
+					    </div>
+						<div  id="about-content">
+				
+							<p>
+								</br> The Korean Undergraduate Student Association of the Vanderbilt University consists of students whose goal is to promote the education and enrichment of its members and the university community with aspects of the Korean culture. The club and its activities are open to any and all who are interested in the Korean-American community and Korean culture. </br></br>
+
+								We strive to provide: </br>
+								• Sense of community at Vandy </br>
+								• Gahjok family groups </br>
+								• “Bae” System (Hoobae/Sunbae System) </br>
+								• Culture Show collaboration with other Korean organizations on campus </br>
+								• Social Events including Inter-KSA parties, Korean BBQ Night </br>
+								• Opportunities to interact with other cultural groups on campus </br>
+								• Career and internship opportunities </br>
+								• Unforgettable memories throughout your college career</br>
+								</p>
+						
+
 					</div>
 				</div>
 			</div>
+			<!-- <div id="white-rectangle"></div> -->
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 			<!--carousel/about/exec/photo/calendar/contact-->
+<!--
 			<div id="maininfo">
 				{% block carousel %}{% endblock %}
 				{% block about %}{% endblock %}
@@ -71,19 +157,9 @@
 				{% block events %}{% endblock %}
 				{% block photo %}{% endblock %}
 				{% block contact %}{% endblock %}
+			
 			</div>
-			<div id="footer">
-				<div class="narrower-container">
-					<div id="footer-desc">
-						Copyright &copy 2016 Vanderbilt Korean Undergraduate Student Association. All Rights Reserved. <br><br>
-						<!-- <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. -->
-					</div>
-					<div id="toTop">
-						<a href="#"><strong>top</strong>^</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
+		-->
+	</body >
 </html>
 
